add endpoints for subject extraction points, update openapi, add endpoint for listing apps
