# services/authoring/src/routes/subject-extraction-rules.ts
@@ -1,5 +1,5 @@
 import { AutoWired, Inject } from 'typescript-ioc';
-import { Path, PUT, ServiceContext, Context, QueryParam } from 'typescript-rest';
+import { Path, GET, PUT, ServiceContext, Context, QueryParam } from 'typescript-rest';
 import { Authorize } from '../security/authorize';
 import { PERMISSIONS } from '../security/permissions/consts';
 import SubjectExtractionRulesRepository from '../repositories/extraction-rules-repository';
@@ -16,10 +16,17 @@ export class SubjectExtractionRulesController {
 
   @Authorize({ permission: PERMISSIONS.ADMIN })
   @PUT
-  async updatePolicy( @QueryParam('author.name') name: string, @QueryParam('author.email') email: string, content: { subject_extraction_rules: string }): Promise<string> {
-    const oid = await this.subjectExtractionRulesRepository.updateSubjectExtractionRules(content.subject_extraction_rules, { name, email });
+  async updatePolicy( @QueryParam('author.name') name: string, @QueryParam('author.email') email: string, content: { data: string }): Promise<string> {
+    const oid = await this.subjectExtractionRulesRepository.updateSubjectExtractionRules(content.data, { name, email });
     addOid(this.context.response, oid);
 
     return 'OK';
+  }
+
+  @Authorize({ permission: PERMISSIONS.ADMIN })
+  @GET
+  async get(): Promise<{content: string}> {
+    const policy = await this.subjectExtractionRulesRepository.getSubjectExtractionRules();
+    return {content: policy};
   }
 }
